--- a/cs63320f19/site/index.html
+++ b/cs63320f19/site/index.html
@@ -32,11 +32,43 @@
 
                 <!-- Collapsed navigation -->
                 <div class="navbar-header">
+                    <!-- Expander button -->
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                     <a class="navbar-brand" href=".">CS6332-F2019</a>
                 </div>
 
                 <!-- Expanded navigation -->
                 <div class="navbar-collapse collapse">
+                        <!-- Main navigation -->
+                        <ul class="nav navbar-nav">
+                            <li class="active">
+                                <a href=".">Home</a>
+                            </li>
+                            <li >
+                                <a href="1general/">Course Information</a>
+                            </li>
+                            <li >
+                                <a href="2schedule/">Schedule</a>
+                            </li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    
+<li >
+    <a href="resources/papers/">Papers</a>
+</li>
+                                    
+<li >
+    <a href="resources/tools/">Arsenal</a>
+</li>
+                                </ul>
+                            </li>
+                        </ul>
 
                     <ul class="nav navbar-nav navbar-right">
                         <li>
@@ -44,6 +76,16 @@
                                 <i class="fa fa-search"></i> Search
                             </a>
                         </li>
+                            <li class="disabled">
+                                <a rel="next" >
+                                    <i class="fa fa-arrow-left"></i> Previous
+                                </a>
+                            </li>
+                            <li >
+                                <a rel="prev" href="1general/">
+                                    Next <i class="fa fa-arrow-right"></i>
+                                </a>
+                            </li>
                     </ul>
                 </div>
             </div>
@@ -52,27 +94,17 @@
         <div class="container">
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
-        <li class="main active"><a href="#news">News</a></li>
+        <li class="main active"><a href="#home">Home</a></li>
+            <li><a href="#news">News</a></li>
     </ul>
 </div></div>
                 <div class="col-md-9" role="main">
 
-<p>===========================================
-CS 6265: Information Security Lab
-===========================================</p>
-<p>.. toctree::
-   :hidden:
-   :glob:</p>
-<p>info
-   cal
-   rules
-   ref</p>
+<h1 id="home">Home</h1>
 <hr />
 <h2 id="news">News</h2>
 <ul>
-<li>03/30/2016: Welcome!</li>
-<li>08/22/2016: Please bring your laptop into the meetings!</li>
-<li>08/31/2016: Recitation from 5-6pm in Klaus 1447!</li>
+<li>08/19/2019: Course site open. Welcome!</li>
 </ul></div>
         </div>
 
@@ -156,5 +188,5 @@ CS 6265: Information Security Lab
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2019-08-19 20:15:59
+Build Date UTC : 2019-08-26 21:46:53
 -->
