quiz section added.

--- a/cs63320f19/site/projdraft/index.html
+++ b/cs63320f19/site/projdraft/index.html
@@ -58,19 +58,6 @@
                             <li >
                                 <a href="../projects/">Projects</a>
                             </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Assignments <b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    
-<li >
-    <a href="../assignments/">Assignments</a>
-</li>
-                                    
-<li >
-    <a href="../quizzes/">quizzes</a>
-</li>
-                                </ul>
-                            </li>
                         </ul>
 
                     <ul class="nav navbar-nav navbar-right">
@@ -107,6 +94,7 @@
         <li class="main "><a href="#comparsion-of-process-level-instrumentation-approachs-virtualization">Comparsion of process-level instrumentation approachs virtualization</a></li>
             <li><a href="#resources">Resources</a></li>
         <li class="main "><a href="#automated-ioc-processing-to-produce-actionable-security-rules">Automated IOC processing to produce actionable security rules</a></li>
+        <li class="main "><a href="#conntrack-visualizer">Conntrack Visualizer</a></li>
     </ul>
 </div></div>
                 <div class="col-md-9" role="main">
@@ -343,6 +331,7 @@
 <h2 id="automated-ioc-processing-to-produce-actionable-security-rules">Automated IOC processing to produce actionable security rules</h2>
 <p><em>Indicator of Compromise (IOC)</em> indicates an artifact observed on a network or in an operating system that, with high confidence, indicates a computer intrusion. While IOC transforms the game security by cultivating the smooth exchange of security indicators. To further facilitates security information exchange by addressing the complexity and hectic nature of such security information that we have observed with the existing protocol (e.g., <a href="">Yara rules</a>),  a number of different standards are proposed and work on progress (<a href="">STIX</a>, <a href="">TAXI</a>). While these proposals attempt to address large portion of problem domain, still we have non-negligible rooms remain for improvements, for instance, many of important security IOCs are posted in a hard to parse not confirming to Internet standard. For instance, many security analysis are written in a plain English in a form of technical report, whitepaper, or blog postings. </p>
 <p>From this project, student will attempts to parse malformed security indicators into STIX or TAXI conpatiable formation, so as it can be properly translated into standard IOC format and further circulated.  </p>
+<h1 id="conntrack-visualizer">Conntrack Visualizer</h1>
 <hr />
 <p>Page last revised on: 2019-08-30</p></div>
         </div>
