--- a/cs63320f19/site/projects/index.html
+++ b/cs63320f19/site/projects/index.html
@@ -58,19 +58,6 @@
                             <li class="active">
                                 <a href="./">Projects</a>
                             </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Assignments <b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    
-<li >
-    <a href="../assignments/">Assignments</a>
-</li>
-                                    
-<li >
-    <a href="../quizzes/">quizzes</a>
-</li>
-                                </ul>
-                            </li>
                         </ul>
 
                     <ul class="nav navbar-nav navbar-right">
@@ -84,8 +71,8 @@
                                     <i class="fa fa-arrow-left"></i> Previous
                                 </a>
                             </li>
-                            <li >
-                                <a rel="prev" href="../assignments/">
+                            <li class="disabled">
+                                <a rel="prev" >
                                     Next <i class="fa fa-arrow-right"></i>
                                 </a>
                             </li>
@@ -104,9 +91,10 @@
             <li><a href="#edge-tpu-related-research-projects">Edge TPU related research projects</a></li>
             <li><a href="#improvement-for-automated-large-scale-malware-analysis-study">Improvement for Automated Large-scale Malware Analysis Study</a></li>
             <li><a href="#implementation-of-advanced-persitent-threat-apt-framework-for-security-evaluation">Implementation of Advanced Persitent Threat (APT) framework for Security Evaluation</a></li>
-            <li><a href="#steganography-or-image-forensics-analysis-and-defense-for-malcious-payload-embedded-documentation">Steganography or image forensics -- Analysis and defense for malcious payload embedded documentation</a></li>
-            <li><a href="#comparsion-of-process-level-instrumentation-approachs-virtualization">Comparsion of process-level instrumentation approachs virtualization</a></li>
+            <li><a href="#steganography-or-image-forensics-analysis-and-defense-for-malicious-payload-embedded-documentation">Steganography or image forensics -- Analysis and defense for malicious payload embedded documentation</a></li>
+            <li><a href="#comparison-of-process-level-instrumentation-approachs-virtualization">Comparison of process-level instrumentation approachs virtualization</a></li>
             <li><a href="#automated-ioc-processing-to-produce-actionable-security-rules">Automated IOC processing to produce actionable security rules</a></li>
+            <li><a href="#cuckoo-fuzzing">Cuckoo Fuzzing</a></li>
     </ul>
 </div></div>
                 <div class="col-md-9" role="main">
@@ -130,7 +118,7 @@ It is okay for you to pick one of the following project ideas. Taking it as one 
 <h2 id="system-call-level-data-collection-for-behavioral-security-analysis">System call level data collection for behavioral security analysis</h2>
 <h3 id="motivation">Motivation</h3>
 <h3 id="project-idea-1-system-call-level-data-collection-framework-for-windows">Project idea 1: System-call level data collection framework for Windows</h3>
-<h3 id="project-idea-2-a-comparision-study-of-different-system-call-data-collection-frameworks">Project idea 2: A comparision study of different system call data collection frameworks</h3>
+<h3 id="project-idea-2-a-comparison-study-of-different-system-call-data-collection-frameworks">Project idea 2: A comparison study of different system call data collection frameworks</h3>
 <h3 id="project-idea-3-user-level-support-for-process-dns-query-association">Project idea 3: User-level support for process-DNS query association</h3>
 <h3 id="project-idea-4-tpm-leveraged-integrity-and-safety-assurance-for-edge-data-collection-agent">Project idea 4: TPM leveraged Integrity and Safety Assurance for Edge Data Collection Agent</h3>
 <hr />
@@ -163,12 +151,13 @@ It is okay for you to pick one of the following project ideas. Taking it as one 
 <li><a href="">APT3 scenario by MITRE</a></li>
 </ul>
 <hr />
-<h2 id="steganography-or-image-forensics-analysis-and-defense-for-malcious-payload-embedded-documentation">Steganography or image forensics &ndash; Analysis and defense for malcious payload embedded documentation</h2>
+<h2 id="steganography-or-image-forensics-analysis-and-defense-for-malicious-payload-embedded-documentation">Steganography or image forensics &ndash; Analysis and defense for malicious payload embedded documentation</h2>
 <hr />
-<h2 id="comparsion-of-process-level-instrumentation-approachs-virtualization">Comparsion of process-level instrumentation approachs virtualization</h2>
+<h2 id="comparison-of-process-level-instrumentation-approachs-virtualization">Comparison of process-level instrumentation approachs virtualization</h2>
 <hr />
 <h2 id="automated-ioc-processing-to-produce-actionable-security-rules">Automated IOC processing to produce actionable security rules</h2>
-<p>Page last revised on: 2019-08-30</p></div>
+<h2 id="cuckoo-fuzzing">Cuckoo Fuzzing</h2>
+<p>Page last revised on: 2019-09-02</p></div>
         </div>
 
         <footer class="col-md-12">
