--- a/cs63320f19/site/projects/index.html
+++ b/cs63320f19/site/projects/index.html
@@ -58,6 +58,15 @@
                             <li class="active">
                                 <a href="./">Projects</a>
                             </li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Assignments <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    
+<li >
+    <a href="../quiz01/">quiz 01</a>
+</li>
+                                </ul>
+                            </li>
                         </ul>
 
                     <ul class="nav navbar-nav navbar-right">
@@ -71,8 +80,8 @@
                                     <i class="fa fa-arrow-left"></i> Previous
                                 </a>
                             </li>
-                            <li class="disabled">
-                                <a rel="prev" >
+                            <li >
+                                <a rel="prev" href="../quiz01/">
                                     Next <i class="fa fa-arrow-right"></i>
                                 </a>
                             </li>
