--- a/cs63320f19/site/inc/index.html
+++ b/cs63320f19/site/inc/index.html
@@ -58,6 +58,15 @@
                             <li >
                                 <a href="../projects/">Projects</a>
                             </li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Assignments <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    
+<li >
+    <a href="../quiz01/">quiz 01</a>
+</li>
+                                </ul>
+                            </li>
                         </ul>
 
                     <ul class="nav navbar-nav navbar-right">
