--- a/cs63320f19/site/index.html
+++ b/cs63320f19/site/index.html
@@ -58,6 +58,15 @@
                             <li >
                                 <a href="projects/">Projects</a>
                             </li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Assignments <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    
+<li >
+    <a href="quiz01/">quiz 01</a>
+</li>
+                                </ul>
+                            </li>
                         </ul>
 
                     <ul class="nav navbar-nav navbar-right">
@@ -170,5 +179,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2019-09-05 21:27:27
+Build Date UTC : 2019-09-06 22:41:53
 -->
