--- a/cs63320f19/site/schedule/index.html
+++ b/cs63320f19/site/schedule/index.html
@@ -58,6 +58,15 @@
                             <li >
                                 <a href="../projects/">Projects</a>
                             </li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Assignments <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    
+<li >
+    <a href="../quiz01/">quiz 01</a>
+</li>
+                                </ul>
+                            </li>
                         </ul>
 
                     <ul class="nav navbar-nav navbar-right">
@@ -231,7 +240,7 @@
 </table>
 
 <hr />
-<p>Page last revised on: 2019-08-30</p></div>
+<p>Page last revised on: 2019-09-06</p></div>
         </div>
 
         <footer class="col-md-12">
