--- a/cs63320f19/site/projdraft/index.html
+++ b/cs63320f19/site/projdraft/index.html
@@ -106,6 +106,8 @@
         <li class="main "><a href="#conntrack-visualizer">Conntrack Visualizer</a></li>
         <li class="main "><a href="#bridging-threat-intelligence">Bridging Threat Intelligence</a></li>
         <li class="main "><a href="#user-level-process-dns-correlation">User level process-DNS correlation</a></li>
+        <li class="main "><a href="#efficient-and-complete-ipc-monitoring-mechanism">Efficient and Complete IPC monitoring mechanism</a></li>
+            <li><a href="#project-idea-4-tpm-leveraged-integrity-and-safety-assurance-for-edge-data-collection-agent_1">Project idea 4: TPM leveraged Integrity and Safety Assurance for Edge Data Collection Agent</a></li>
     </ul>
 </div></div>
                 <div class="col-md-9" role="main">
@@ -345,6 +347,7 @@
 <h2 id="conntrack-visualizer">Conntrack Visualizer</h2>
 <h2 id="bridging-threat-intelligence">Bridging Threat Intelligence</h2>
 <ul>
+<li>Leveraging Cuckoo environment</li>
 <li>Between network and system domains</li>
 <li>While one threat intelligence matches, how about another?</li>
 <li>Does how credibility/trust propagate across different domains?</li>
@@ -354,8 +357,28 @@
 <ul>
 <li>For Windows and Linux</li>
 </ul>
+<h2 id="efficient-and-complete-ipc-monitoring-mechanism">Efficient and Complete IPC monitoring mechanism</h2>
 <hr />
-<p>Page last revised on: 2019-09-06</p></div>
+<h3 id="project-idea-4-tpm-leveraged-integrity-and-safety-assurance-for-edge-data-collection-agent_1">Project idea 4: TPM leveraged Integrity and Safety Assurance for Edge Data Collection Agent</h3>
+<ul>
+<li>
+<p>In implementing host-based security solutions, the guarantee for integrity of data collection agent and trustworthiness of its report have  always been a challenging problem. For instance, the security analyst from Security Operation Center (SoC) does not have many options to confirm reports from end-devices (e.g., computers, servers, IoT devices) are indeed genunie (uncompromised). </p>
+</li>
+<li>
+<p>In this project, we want to leverage the hardware encoded security to build a root of trust for end-host security monitoring agents and confirm the authenticity and integrity of its status and messages it is reporting.</p>
+</li>
+<li>
+<p>From the project, students will </p>
+<ul>
+<li>Investigate and study threat model for end-host security agent.</li>
+<li>Inverstigate the capability and limitation of generally used TPM devices.</li>
+<li>Design and propose different level of security design and their trade-offs.</li>
+<li>Build prototype for TPM leveraged data collection agent </li>
+</ul>
+</li>
+</ul>
+<hr />
+<p>Page last revised on: 2019-09-12</p></div>
         </div>
 
         <footer class="col-md-12">
