--- a/cs63320f19/site/404.html
+++ b/cs63320f19/site/404.html
@@ -63,7 +63,11 @@
                                 <ul class="dropdown-menu">
                                     
 <li >
-    <a href="/quiz01/">quiz 01</a>
+    <a href="/quiz01/">quiz 0x01</a>
+</li>
+                                    
+<li >
+    <a href="/assignment01/">assignment 0x01</a>
 </li>
                                 </ul>
                             </li>
