--- a/cs63320f19/site/index.html
+++ b/cs63320f19/site/index.html
@@ -63,7 +63,11 @@
                                 <ul class="dropdown-menu">
                                     
 <li >
-    <a href="quiz01/">quiz 01</a>
+    <a href="quiz01/">quiz 0x01</a>
+</li>
+                                    
+<li >
+    <a href="assignment01/">assignment 0x01</a>
 </li>
                                 </ul>
                             </li>
@@ -179,5 +183,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2019-09-12 22:06:15
+Build Date UTC : 2019-09-13 16:19:46
 -->
