--- a/cs63320f19/site/projdraft/index.html
+++ b/cs63320f19/site/projdraft/index.html
@@ -63,7 +63,11 @@
                                 <ul class="dropdown-menu">
                                     
 <li >
-    <a href="../quiz01/">quiz 01</a>
+    <a href="../quiz01/">quiz 0x01</a>
+</li>
+                                    
+<li >
+    <a href="../assignment01/">assignment 0x01</a>
 </li>
                                 </ul>
                             </li>
@@ -146,12 +150,7 @@
 </ul>
 <h3 id="project-idea-2-a-comparision-study-of-different-system-call-data-collection-frameworks">Project idea 2: A comparision study of different system call data collection frameworks</h3>
 <ul>
-<li>
-<p>We it is previously mentioned, we have different data collection sources (Linux Audit, Sysdig, DTrace &hellip;) that can run on a same system (say Linux). Students can try to build a same data collection framework for leveraging different mechanisms to  compare the efficency and capability. </p>
-</li>
-<li>
-<p>Project can start by </p>
-<ul>
+<li>Project can start by <ul>
 <li>Data collection implemented/configured to collection the same subset of system calls (e.g., read(), write(), exec(), fork(), send(), recve()) and run those against standardized workload (e.g., benchmark suites and workloads). </li>
 </ul>
 </li>
