--- a/cs63320f19/site/schedule/index.html
+++ b/cs63320f19/site/schedule/index.html
@@ -63,7 +63,11 @@
                                 <ul class="dropdown-menu">
                                     
 <li >
-    <a href="../quiz01/">quiz 01</a>
+    <a href="../quiz01/">quiz 0x01</a>
+</li>
+                                    
+<li >
+    <a href="../assignment01/">assignment 0x01</a>
 </li>
                                 </ul>
                             </li>
@@ -129,28 +133,28 @@
     <td class="tg-c3ow">Week 2<br>(Aug 30, 2019)</td>
     <td class="tg-c3ow"><span style="font-weight:bold">Binary and Process - Basic Concepts</span><br><br>X86 assembly, The ELF file  format<br>Linux x86 Program Start Up, <br>Program in Memory,<br>Load-time reloc. of shared libraries<br><br><span style="font-weight:bold">How to read / present academic papers</span></td>
     <td class="tg-c3ow"><a href="http://readelf/">readelf</a>, <a href="http://objdump/">objdump</a>, <br><a href="http://todo/">nm</a>, <br><a href="http://gdb/">GDB</a>, <a href="http://gdbinit/">gdbinit</a>,<br><a href="https://defuse.ca/online-x86-assembler.htm">Online x86 Assembler</a><br><a href="https://github.com/microsoft/detours">Microsoft Detour</a></td>
-    <td class="tg-c3ow"><a href="http://www.naver.com/">1</a>, <a href="http://www.naver.com/">2</a>, <a href="http://www.naver.com/">3</a></td>
+    <td class="tg-c3ow"></td>
     <td class="tg-c3ow"></td>
   </tr>
   <tr>
     <td class="tg-c3ow">Week 3 <br>(Sep 6, 2019)</td>
     <td class="tg-c3ow"><span style="font-weight:bold">Memory Corruption Attacks &amp; Defenses</span><br><br>Buffer overflow, Stack buffer overflow<br>x86 NX support, Stack canaries, ASLR<br><br>System call tracing with library interpostion</td>
     <td class="tg-c3ow">IDA pro, Ghidra, <br>Radare2</td>
-    <td class="tg-c3ow"><a href="http://www.naver/">4</a>, <a href="http://todo/">5</a></td>
+    <td class="tg-c3ow"></td>
     <td class="tg-c3ow"><br>Quiz: Reverse engineering <br>binaries</td>
   </tr>
   <tr>
     <td class="tg-c3ow">Week 4 <br>(Sep 13, 2019)</td>
-    <td class="tg-c3ow"><span style="font-weight:bold">Modern Binary Exploits</span><br><br>Shellcode, Return-Oriented Programming (ROP), <br>ret2libc, Signal Oriented Programming</td>
+    <td class="tg-c3ow"><span style="font-weight:bold">Modern Binary Exploits</span><br><br>Shellcode, Return-Oriented Programming (ROP), <br>ret2libc, Control Flow Integrity</td>
     <td class="tg-c3ow"></td>
-    <td class="tg-c3ow">[TBD]</td>
-    <td class="tg-c3ow">Quiz: Create your own <br>CTF problems</td>
+    <td class="tg-c3ow">Control Flow Integrity</td>
+    <td class="tg-c3ow">Assignment 0x01: <br>Binary Exploit 1-0-1</td>
   </tr>
   <tr>
     <td class="tg-c3ow">Week 5 <br>(Sep 20, 2019)</td>
     <td class="tg-c3ow"><span style="font-weight:bold">Virtualization Basics</span></td>
     <td class="tg-c3ow"></td>
-    <td class="tg-c3ow">[TBD]</td>
+    <td class="tg-c3ow">Return Oriented Programming</td>
     <td class="tg-c3ow">Project proposal Due</td>
   </tr>
   <tr>
@@ -158,7 +162,7 @@
     <td class="tg-c3ow"><span style="font-weight:bold">VMM Introspection 1</span></td>
     <td class="tg-c3ow"></td>
     <td class="tg-c3ow">[TBD]</td>
-    <td class="tg-c3ow">Assignment1</td>
+    <td class="tg-c3ow">Assignment 0x01 Due</td>
   </tr>
   <tr>
     <td class="tg-c3ow">Week 7 <br>(Sep 28, 2019)</td>
@@ -172,7 +176,7 @@
     <td class="tg-c3ow"><span style="font-weight:bold">Static Analysis 1</span></td>
     <td class="tg-c3ow"></td>
     <td class="tg-c3ow">[TBD]</td>
-    <td class="tg-c3ow">Assignment1 due</td>
+    <td class="tg-c3ow">Assignment 0x02</td>
   </tr>
   <tr>
     <td class="tg-c3ow">Week 9 <br>(Oct 11, 2019)</td>
@@ -186,42 +190,42 @@
     <td class="tg-c3ow"><span style="font-weight:bold">Static Analysis 3</span></td>
     <td class="tg-c3ow"></td>
     <td class="tg-c3ow">[TBD]</td>
-    <td class="tg-c3ow">Assignment2</td>
+    <td class="tg-c3ow">Assignment 0x02 Due</td>
   </tr>
   <tr>
     <td class="tg-c3ow">Week 11 <br>(Oct 25, 2019)</td>
     <td class="tg-c3ow"><span style="font-weight:bold">Fuzzing and Symbolic Execution</span></td>
     <td class="tg-c3ow"></td>
     <td class="tg-c3ow">[TBD]</td>
-    <td class="tg-c3ow">Midterm Report <br>&amp; Presentation</td>
+    <td class="tg-c3ow"></td>
   </tr>
   <tr>
     <td class="tg-c3ow">Week 12 <br>(Nov 1, 2019)</td>
     <td class="tg-c3ow"><span style="font-weight:bold">Attacker techniques</span></td>
     <td class="tg-c3ow"></td>
     <td class="tg-c3ow">[TBD]</td>
-    <td class="tg-c3ow"></td>
+    <td class="tg-c3ow">Midterm Report</td>
   </tr>
   <tr>
     <td class="tg-c3ow">Week 13 <br>(Nov 8, 2019)</td>
     <td class="tg-c3ow"><span style="font-weight:bold">Latest security topics 1</span></td>
     <td class="tg-c3ow"></td>
     <td class="tg-c3ow">[TBD]</td>
-    <td class="tg-c3ow">Assignment 2 due</td>
+    <td class="tg-c3ow">Assignment 0x03</td>
   </tr>
   <tr>
     <td class="tg-c3ow">Week 14 <br>(Nov 15, 2019)</td>
     <td class="tg-c3ow"><span style="font-weight:bold">Latest security topics  2</span></td>
     <td class="tg-c3ow"></td>
     <td class="tg-c3ow">[TBD]</td>
-    <td class="tg-c3ow">Assignment 3</td>
+    <td class="tg-c3ow"></td>
   </tr>
   <tr>
     <td class="tg-c3ow">Week 15<br>(Nov 22, 2019)</td>
     <td class="tg-c3ow"><span style="font-weight:bold">Latest security topics 3</span></td>
     <td class="tg-c3ow"></td>
     <td class="tg-c3ow">[TBD]</td>
-    <td class="tg-c3ow"></td>
+    <td class="tg-c3ow">Assignment 0x03 due</td>
   </tr>
   <tr>
     <td class="tg-c3ow">Week 16<br>(Nov 29, 2019)</td>
@@ -235,7 +239,7 @@
     <td class="tg-c3ow"><span style="font-weight:bold">Project Presentation</span></td>
     <td class="tg-c3ow"></td>
     <td class="tg-c3ow"></td>
-    <td class="tg-c3ow"><br>Assignment 3 due,<br>Project Final Report <br>&amp; Presentation</td>
+    <td class="tg-c3ow">Project Final Report <br>&amp; Presentation</td>
   </tr>
 </table>
 
