--- a/cs63320f19/site/inc/index.html
+++ b/cs63320f19/site/inc/index.html
@@ -52,8 +52,18 @@
                             <li >
                                 <a href="../schedule/">Schedule</a>
                             </li>
-                            <li >
-                                <a href="../papers/">Papers</a>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Papers <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    
+<li >
+    <a href="../papers/">Paper List</a>
+</li>
+                                    
+<li >
+    <a href="../paper-assignment/">Paper Assignment</a>
+</li>
+                                </ul>
                             </li>
                             <li >
                                 <a href="../projects/">Projects</a>
