--- a/cs63320f19/site/index.html
+++ b/cs63320f19/site/index.html
@@ -52,8 +52,18 @@
                             <li >
                                 <a href="schedule/">Schedule</a>
                             </li>
-                            <li >
-                                <a href="papers/">Papers</a>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Papers <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    
+<li >
+    <a href="papers/">Paper List</a>
+</li>
+                                    
+<li >
+    <a href="paper-assignment/">Paper Assignment</a>
+</li>
+                                </ul>
                             </li>
                             <li >
                                 <a href="projects/">Projects</a>
@@ -183,5 +193,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2019-09-21 13:07:32
+Build Date UTC : 2019-09-23 09:38:48
 -->
