--- a/cs63320f19/site/projects/index.html
+++ b/cs63320f19/site/projects/index.html
@@ -52,8 +52,18 @@
                             <li >
                                 <a href="../schedule/">Schedule</a>
                             </li>
-                            <li >
-                                <a href="../papers/">Papers</a>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Papers <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    
+<li >
+    <a href="../papers/">Paper List</a>
+</li>
+                                    
+<li >
+    <a href="../paper-assignment/">Paper Assignment</a>
+</li>
+                                </ul>
                             </li>
                             <li class="active">
                                 <a href="./">Projects</a>
@@ -80,7 +90,7 @@
                             </a>
                         </li>
                             <li >
-                                <a rel="next" href="../papers/">
+                                <a rel="next" href="../paper-assignment/">
                                     <i class="fa fa-arrow-left"></i> Previous
                                 </a>
                             </li>
