more edit on assignment.

--- a/cs63320f19/site/schedule/index.html
+++ b/cs63320f19/site/schedule/index.html
@@ -115,15 +115,13 @@
 <h1 id="schedule">Schedule</h1>
 <ul>
 <li>Please note that the course schedule is now <em>tenatitive</em>. It is under subject of
-  change upon the instructor&rsquo;s decision.</li>
-</ul>
+  change upon the instructor&rsquo;s decision.
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
 .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
 .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
 .tg .tg-c3ow{border-color:inherit;text-align:center;vertical-align:top}
 </style>
-
 <table class="tg">
   <tr>
     <th class="tg-c3ow"></th>
@@ -143,14 +141,14 @@
     <td class="tg-c3ow">Week 2<br>(Aug 30, 2019)</td>
     <td class="tg-c3ow"><span style="font-weight:bold">Binary and Process - Basic Concepts</span><br><br>X86 assembly, The ELF file  format<br>Linux x86 Program Start Up, <br>Program in Memory,<br>Load-time reloc. of shared libraries<br><br><span style="font-weight:bold">How to read / present academic papers</span></td>
     <td class="tg-c3ow"><a href="http://readelf/">readelf</a>, <a href="http://objdump/">objdump</a>, <br><a href="http://todo/">nm</a>, <br><a href="http://gdb/">GDB</a>, <a href="http://gdbinit/">gdbinit</a>,<br><a href="https://defuse.ca/online-x86-assembler.htm">Online x86 Assembler</a><br><a href="https://github.com/microsoft/detours">Microsoft Detour</a></td>
-    <td class="tg-c3ow"></td>
+    <td class="tg-c3ow">N/A</td>
     <td class="tg-c3ow"></td>
   </tr>
   <tr>
     <td class="tg-c3ow">Week 3 <br>(Sep 6, 2019)</td>
     <td class="tg-c3ow"><span style="font-weight:bold">Memory Corruption Attacks &amp; Defenses</span><br><br>Buffer overflow, Stack buffer overflow<br>x86 NX support, Stack canaries, ASLR<br><br>System call tracing with library interpostion</td>
     <td class="tg-c3ow">IDA pro, Ghidra, <br>Radare2</td>
-    <td class="tg-c3ow"></td>
+    <td class="tg-c3ow">N/A</td>
     <td class="tg-c3ow"><br>Quiz: Reverse engineering <br>binaries</td>
   </tr>
   <tr>
@@ -169,51 +167,51 @@
   </tr>
   <tr>
     <td class="tg-c3ow">Week 6 <br>(Sep 27, 2019)</td>
-    <td class="tg-c3ow"><span style="font-weight:bold">VMM Introspection 1</span></td>
+    <td class="tg-c3ow">Memory and Device virtualization</td>
     <td class="tg-c3ow"></td>
-    <td class="tg-c3ow">[TBD]</td>
+    <td class="tg-c3ow">CloudVisor: Retrofitting protection of virtual machines <br>in multi-tenant cloud with nested virtualization, <br>When Virtual is Harder than Real: <br>Security Challenges in Virtual Machine Based <br>Computing Environments</td>
     <td class="tg-c3ow">Assignment 0x01 Due</td>
   </tr>
   <tr>
     <td class="tg-c3ow">Week 7 <br>(Sep 28, 2019)</td>
-    <td class="tg-c3ow"><span style="font-weight:bold">VMM Introspection 2</span></td>
+    <td class="tg-c3ow">Network virtualization</td>
     <td class="tg-c3ow"></td>
-    <td class="tg-c3ow">[TBD]</td>
+    <td class="tg-c3ow">Hey, You, Get Off of My Cloud: <br>Exploring Information Leakage in Third-Party Compute Clouds, <br>Spotless Sandboxes: Evading Malware Analysis Systems <br>using Wear-and-Tear Artifacts</td>
     <td class="tg-c3ow"></td>
   </tr>
   <tr>
     <td class="tg-c3ow">Week 8 <br>(Oct 4, 2019)</td>
-    <td class="tg-c3ow"><span style="font-weight:bold">Static Analysis 1</span></td>
+    <td class="tg-c3ow">VM Introspection</td>
     <td class="tg-c3ow"></td>
-    <td class="tg-c3ow">[TBD]</td>
+    <td class="tg-c3ow">The Security Architecture of the Chromium Browser,<br>LLVM: A Compilation Framework</td>
     <td class="tg-c3ow">Assignment 0x02</td>
   </tr>
   <tr>
     <td class="tg-c3ow">Week 9 <br>(Oct 11, 2019)</td>
-    <td class="tg-c3ow"><span style="font-weight:bold">Static Analysis 2</span></td>
+    <td class="tg-c3ow">Static Analysis 1</td>
     <td class="tg-c3ow"></td>
-    <td class="tg-c3ow">[TBD]</td>
+    <td class="tg-c3ow">FlowDroid: Precise Context, Flow, Field, Object-sensitive and Lifecycle-aware <br>Taint Analysis for Android Apps,<br>Compiler Assisted Code Randomization</td>
     <td class="tg-c3ow"></td>
   </tr>
   <tr>
     <td class="tg-c3ow">Week 10 <br>(Oct 18, 2019)</td>
-    <td class="tg-c3ow"><span style="font-weight:bold">Static Analysis 3</span></td>
+    <td class="tg-c3ow">Static Analysis 2</td>
     <td class="tg-c3ow"></td>
-    <td class="tg-c3ow">[TBD]</td>
-    <td class="tg-c3ow">Assignment 0x02 Due</td>
+    <td class="tg-c3ow">Traps and Pitfalls: Practical Problems in <br>System Call Interposition Based Security Tools,<br>Understanding Integer Overflow in C/C++</td>
+    <td class="tg-c3ow"></td>
   </tr>
   <tr>
     <td class="tg-c3ow">Week 11 <br>(Oct 25, 2019)</td>
     <td class="tg-c3ow"><span style="font-weight:bold">Fuzzing and Symbolic Execution</span></td>
     <td class="tg-c3ow"></td>
-    <td class="tg-c3ow">[TBD]</td>
-    <td class="tg-c3ow"></td>
+    <td class="tg-c3ow">IOTFUZZER: Discovering Memory Corruptions <br>in IoT Through App-based Fuzzing</td>
+    <td class="tg-c3ow">Assignment 0x02 Due</td>
   </tr>
   <tr>
     <td class="tg-c3ow">Week 12 <br>(Nov 1, 2019)</td>
     <td class="tg-c3ow"><span style="font-weight:bold">Attacker techniques</span></td>
     <td class="tg-c3ow"></td>
-    <td class="tg-c3ow">[TBD]</td>
+    <td class="tg-c3ow">(State of) The Art of War: Offensive Techniques in Binary Analysis,<br>Stuxnet: Dissecting a Cyberwarfare Weapon,<br>UNVEIL: A Large-Scale, Automated Approach to Detecting Ransomware</td>
     <td class="tg-c3ow">Midterm Report</td>
   </tr>
   <tr>
@@ -251,8 +249,8 @@
     <td class="tg-c3ow"></td>
     <td class="tg-c3ow">Project Final Report <br>&amp; Presentation</td>
   </tr>
-</table>
-
+</table></li>
+</ul>
 <hr />
 <p>Page last revised on: 2019-09-13</p></div>
         </div>
