--- a/cs63320f19/site/assignments/index.html
+++ b/cs63320f19/site/assignments/index.html
@@ -79,6 +79,10 @@
 <li >
     <a href="../assignment01/">assignment 0x01</a>
 </li>
+                                    
+<li >
+    <a href="../assignment02/">assignment 0x02</a>
+</li>
                                 </ul>
                             </li>
                         </ul>
