--- a/cs63320f19/site/index.html
+++ b/cs63320f19/site/index.html
@@ -79,6 +79,10 @@
 <li >
     <a href="assignment01/">assignment 0x01</a>
 </li>
+                                    
+<li >
+    <a href="assignment02/">assignment 0x02</a>
+</li>
                                 </ul>
                             </li>
                         </ul>
@@ -193,5 +197,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2019-09-26 15:42:38
+Build Date UTC : 2019-10-04 14:08:34
 -->
